--- a/src/app/pages/Parametrages/parametage-site/parametage-site.component.html
+++ b/src/app/pages/Parametrages/parametage-site/parametage-site.component.html
@@ -1,6 +1,6 @@
 
-<div class="col-12" style="padding-bottom: 10px;">
-  <h2 style="font-family: 'Times New Roman', Times, serif;color: #0f2a9e;text-align: center;justify-content: center;">Parametrages des Sites </h2>
+<div class="col-12">
+  <h2 style="font-family: 'Times New Roman', Times, serif;color: #0f2a9e;text-align: center;justify-content: center;font-size: 24px;margin: 0px;">Parametrages des Sites </h2>
 </div>
 <div class="col-12">
 
@@ -40,7 +40,6 @@
   
         </nb-tab>
      
-  
       </nb-tabset>
     
     </nb-card>
@@ -892,13 +891,13 @@
   
           <button nbButton (click)="ref.close()" class=" float-right btn btn-danger "
   
-            style="background-color: crimson;color: aliceblue;" hero>Fermer</button>
+            style="background-color: crimson;color: aliceblue;" >Fermer</button>
   
           <button nbButton (click)="modifierAtelier(ref)" class=" float-right btn btn-success mr-1"
   
-            style="background-color: green;color: aliceblue;" hero>Modifier</button>
+            style="background-color: green;color: aliceblue;" >Modifier</button>
   
-   
+        
   
         </nb-card-footer>
   
