--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,34 +1,105 @@
-<div class="header-container">
-  <div class="logo-container">
-    <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
-      <nb-icon icon="menu-2-outline"></nb-icon>
-    </a>
-    <!-- <a class="logo" href="#" (click)="navigateHome()">ngx-<span>admin</span></a> -->
-    <img src="../../../assets/images/logo.png"   width="100" height="80">
+
+<div class="header-container partie1 ">
+  <div class="logo-container ">
+    <p style="color: #004AAD;font-size: 20px;font-weight: bold;"> Unite Operationnelle {{currentuserUnite}} </p>
+
+    <!--image safran-->
+    <!-- <div class="image mb-4" style="display: flex; align-items: center;">
+      <p style="text-align: center;font-family: cursive, sans-serif; color: #004AAD;font-size: 20px;font-weight: bold;"> Unite Operationnelle EFT </p>
+   </div> -->
+
   </div>
-  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
-    <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
-  </nb-select>
+
 </div>
 
-<div class="header-container">
-  <nb-actions size="small">
 
-    <nb-action class="control-item">
-      <nb-search type="rotate-layout"></nb-search>
-    </nb-action>
-    <nb-action class="control-item" icon="email-outline"></nb-action>
-    <nb-action class="control-item" icon="bell-outline"></nb-action>
+
+<div class="header-container">
+  <div class="icons-container">
+
+    <div class="separator"></div>
+  
+    <div class="icon-container" (click)="showNotifications()">
+  
+      <nb-icon icon="bell-outline" ></nb-icon>
+  
+      <span class="notification-count" [class.vibrate]="nbnotif > 0" *ngIf="nbnotif>0" >{{nbnotif}}</span>
+  
+    </div>
+  
+    <div class="separator"></div>
+  
+  </div>
+  <nb-actions size="small">
+        
     <nb-action class="user-action">
       <nb-user [nbContextMenu]="userMenu"
                [onlyPicture]="userPictureOnly"
-               [name]="currentuser?.username"
+               [name]="currentuser?.prenom"
                [picture]="currentuser?.image">
       </nb-user>
     </nb-action>
   </nb-actions>
+ 
+  <ng-container *ngIf="showNotificationList" >
+ <div class="wrapper" >
+    
+      <div  *ngIf=" (unseenNotifications.length > 0) ;else noData" >
+        <div *ngFor="let notification of unseenNotifications">
+        <div class="notif error" *ngIf="notification.subject=='Probleme de Blockage'" >
+          <div class="container-1">
+              <i class="fas fa-times-circle"></i>
+          </div>
+          <div class="container-2">
+              <p>{{notification.subject}}</p>
+              <p class="msg">{{notification.message}}</p>
+              <p>{{ notification.createdAt }}</p>
+          </div>
+          <button class="delete" (click)="markAsSeen(notification)"><i class="fa-solid fa-eye"></i></button>
+      </div>
+      <div class="notif warning" *ngIf="notification.subject=='Probleme de non Conformité'" >
+        <div class="container-1">
+            <i class="fas fa-times-circle"></i>
+        </div>
+        <div class="container-2">
+            <p>{{notification.subject}}</p>
+            <p class="msg">{{notification.message}}</p>
+            <p>{{ notification.createdAt }}</p>
+        </div>
+        <button class="delete"(click)="markAsSeen(notification)"><i class="fa-solid fa-eye"></i></button>
+    </div>
+      <div class="notif success" *ngIf="notification.subject=='Validation de Non Conformite CC '|| notification.subject=='Validation de Non Conformite OKD'" >
+        <div class="container-1">
+            <i class="fas fa-check"></i>
+        </div>
+        <div class="container-2">
+            <p>{{notification.subject}}</p>
+            <p class="msg">{{notification.message}}</p>
+            <p>{{ notification.createdAt }}</p>
+        </div>
+        <button class="delete" (click)="markAsSeen(notification)"><i class="fa-solid fa-eye"></i></button>
+    </div>
+    </div>
+      <!-- <div class="notif info"  *ngFor="let notification of seenNotifications">
+        <div class="container-1">
+            <i class="fas fa-times-circle"></i>
+        </div>
+        <div class="container-2">
+            <p>{{notification.subject}}</p>
+            <p class="msg">{{notification.message}}</p>
+            <p>{{ notification.createdAt }}</p>
+        </div>
+       
+    </div> -->
+      </div>
+      <a  class="see-more-link" (click)='navigateToNotify()'>Voir plus de notifications</a>
+   </div>
+  </ng-container>
+  <ng-template #noData>
+  
+    <div class="no-data-message">
+      Aucune Nouvelle notification disponible.
+    </div>
+    <hr>
+  </ng-template>
 </div>
-<!-- <ng-template #userMenuItems let-user="user">
-  <nb-menu-item (click)="logOut()">Log out</nb-menu-item>
-  <nb-menu-item (click)="navigateToProfile()">Profile</nb-menu-item>
-</ng-template> -->
