--- a/src/app/pages/Add/historique-formation/historique-formation.component.html
+++ b/src/app/pages/Add/historique-formation/historique-formation.component.html
@@ -1,5 +1,5 @@
 <nb-icon icon="archive" status="warning" ghost nbTooltip="Liste des critères
-" [options]="{ animation: { type: 'zoom' } }" style="margin-left: 30px;"  (click)="historique(historiqueFormation)"></nb-icon>
+" [options]="{ animation: { type: 'zoom' } }" style="margin-left:25px;font-size: 30px;"  (click)="historique(historiqueFormation)"></nb-icon>
 
 <ng-template #historiqueFormation let-data let-ref="dialogRef">
 
