--- a/src/app/pages/Add/imprimer-habilitation/imprimer-habilitation.component.html
+++ b/src/app/pages/Add/imprimer-habilitation/imprimer-habilitation.component.html
@@ -1,3 +1,3 @@
 <nb-icon icon="printer" status="success" ghost nbTooltip="Liste des critères
-" [options]="{ animation: { type: 'zoom' } }" style="margin-left: 30px;" (click)="navigate()"></nb-icon>
+" [options]="{ animation: { type: 'zoom' } }"  style="margin-left:25px;font-size: 30px;"(click)="navigate()"></nb-icon>
 
