--- a/src/app/Authentification/login/login.component.html
+++ b/src/app/Authentification/login/login.component.html
@@ -1,41 +1,39 @@
-
-    <div class="contenaire">
-      <div class="wrapper">
-        <div class="title">
-            <img src="../../../assets/images/logo.png" width="100" height="100">
-            <div>Se Connecter</div>
-         </div>
-         <form method="post" [formGroup]="loginFormateurForm" (ngsubmit)=" loginFormateur()" >
+<div class="contenaire">
+    <div class="wrapper">
+      <div class="title">
+          <img src="../../../assets/images/logo.png" width="45%">
+          <div >Se Connecter</div>
+       </div>
+          <form method="post" [formGroup]="loginFormateurForm" (ngsubmit)=" loginFormateur()">
             <div class="field">
-               <input type="text"  name="username" id="username" value="" formControlName="matricule" required>
-               <label>Matricule</label>
+               <input type="text" name="username" id="username" value="" formControlName="matricule"  class="form-control" required>
+               <label>Matricule</label> 
             </div>
             <div *ngIf="matricule?.touched && matricule?.invalid">
-                <small class="text-danger" *ngIf="matricule?.errors?.['required']">matricule
-                    est obligatoire</small>      
-              </div>
-    
+               <small class="text-danger" *ngIf="matricule?.errors?.['required']" style="color: rgb(100, 10, 10);">Matricule
+                  est obligatoire</small>
+            </div>
+
 
             <div class="field">
-               <input type="password" name="password" id="password" formControlName="mdp"required>
-               <label>Password</label>
+               <input type="password" name="password" id="password" formControlName="mdp" required>
+               <label>Mot De Passe</label>
             </div>
             <div *ngIf="mdp?.touched && mdp?.invalid">
-                <small class="text-danger" *ngIf="mdp?.errors?.['required']">Mot de passe 
-                    est obligatoire</small>
-                  
-              </div>
-            <!-- <div class="content">
-               <div class="checkbox">
-                  <input type="checkbox" id="remember-me">
-                  <label for="remember-me">Remember me</label>
-               </div>
-              
-            </div> -->
-            <div class="field">
-               <input type="submit" value="Se Connecter" (click)=" loginFormateur()" 
-               [disabled]="!loginFormateurForm.valid" class="button border fw margin-top-10" name="Se Connecter ">
+               <small class="text-danger" *ngIf="mdp?.errors?.['required']" style="color: rgb(100, 10, 10);">Mot de passe
+                  est obligatoire</small>
+
             </div>
-         </form>
+
+            <div class="field">
+               <input type="submit" value="Se Connecter" (click)=" loginFormateur()"
+                  [disabled]="!loginFormateurForm.valid" class="button border fw margin-top-10" name="Se Connecter ">
+            </div>
+
+         </form> 
+       
       </div>
-    </div>
+      </div>
+
+
+
