--- a/src/app/Authentification/login/login.component.scss
+++ b/src/app/Authentification/login/login.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+ @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -6,16 +6,17 @@
   font-family: 'Poppins', sans-serif;
 }
 .contenaire{
-  //display: grid;
-  height: 100%;
+  height: 100vh;
   width: 100%;
- // place-items: center;
  background: #f2f2f2;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
- //background: linear-gradient(-135deg, #c850c0, #4158d0); 
+ background-image:url('../../../assets/images/loginBg.jpg'); 
+ background-repeat: no-repeat; /* Ensure image doesn't repeat */
+ background-size: cover;    /* Scale image to cover the entire container */
+ background-position: center; 
 }
 ::selection{
   background: #4158d0;
@@ -24,7 +25,7 @@
 .wrapper{
   margin: 50px;
   width: 380px;
-  background: #fff;
+  background:  rgba(252, 252, 252, 0.429);
   border-radius: 15px;
   box-shadow: 0px 20px 20px rgba(0,0,0,0.1);
 }
@@ -33,10 +34,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 35px;
-    font-weight: 400;
+    font-size: 20px;
+    font-weight: 200;
     text-align: center;
-    color: #0a0e57;
+    color: #03063f;
     user-select: none;
     border-radius: 15px 15px 0 0;
    // background: linear-gradient(-135deg, #c850c0, #4158d0);
@@ -46,7 +47,7 @@
   padding: 10px 30px 50px 30px;
 }
 .wrapper form .field{
-  height: 50px;
+  height: 40px;
   width: 100%;
   margin-top: 20px;
   position: relative;
@@ -71,7 +72,7 @@ form .field input:valid{
   left: 20px;
   color: #999999;
   font-weight: 400;
-  font-size: 17px;
+  font-size: 12px;
   pointer-events: none;
   transform: translateY(-50%);
   transition: all 0.3s ease;
@@ -111,21 +112,7 @@ form .content label{
 form .content .pass-link{
   color: "";
 }
-/*form .field input[type="submit"]{
-  color: #fff;
-  border: none;
-  padding-left: 0;
-  margin-top: -10px;
-  font-size: 20px;
-  font-weight: 500;
-  cursor: pointer;
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
-  transition: all 0.3s ease;
-}
-form .field input[type="submit"]:active{
-  transform: scale(0.95);
-}
-*/
+
 
 form .field input[type="submit"] {
   color: #fff;
@@ -148,5 +135,3 @@ form .field input[type="submit"]:disabled {
 form .field input[type="submit"]:active {
   transform: scale(0.95);
 }
-
-
