--- a/src/app/pages/Add/download-button/download-button.component.html
+++ b/src/app/pages/Add/download-button/download-button.component.html
@@ -1,3 +1,3 @@
 <!-- <button nbButton status="danger" ghost  (click)="downloadDocument()"><i class="fas fa-download"></i></button> -->
 <nb-icon icon="download" status="danger" ghost nbTooltip="Liste des critères
-" [options]="{ animation: { type: 'zoom' } }" (click)="download()" ></nb-icon>
+" [options]="{ animation: { type: 'zoom' } }" (click)="download()"  style="margin-left:25px;font-size: 30px;" ></nb-icon>
