--- a/src/app/pages/Add/procede-detail/procede-detail.component.html
+++ b/src/app/pages/Add/procede-detail/procede-detail.component.html
@@ -1,4 +1,4 @@
-<div  id="contentToConvert">
+<div  id="contentToConvert" style="background-color: white;">
 
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
