--- a/src/app/pages/Add/test/test.component.scss
+++ b/src/app/pages/Add/test/test.component.scss
@@ -99,3 +99,28 @@
   font-size: 24px;
   color: #666666;
 }
+
+
+/**************************** testt *******************************************/
+body {
+  margin:0;
+  padding:0;
+  background-color:#ffffff;
+  color:#ffffff;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size:12px;
+  -webkit-text-size-adjust: none;
+}
+a, a:link, a:visited {
+  color:#0652a7;
+  text-decoration:underline;
+}
+img {
+  border:0;
+}
+/*Hotmail and Yahoo specific code*/
+.ReadMsgBody { width: 100%;}
+.ExternalClass {width: 100%;}
+.yshortcuts { color: #777777 }
+.yshortcuts a span { color: #0652a7 }
+
